--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ form
 {
 	width: 30%;
 	position: fixed;
-	left: 10%;
-	top: 30%;
+	left: 35%;
+	top: 20%;
 }
 
 .tockeC1
@@ -58,15 +58,22 @@ form
 #startImg
 {
 	position: fixed;
-	top: 50%;
-	left: 45%;
+	top: 55%;
+	left: 47%;
 }
 
 #settingsImg
 {
 	position: fixed;
-	top: 30%;
+	top: 40%;
 	left: 55%;
+}
+
+#playerNumImg
+{
+	position: fixed;
+	top: 40%;
+	left: 40%;
 }
 
 #leaderboard
